--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "webpack"
   },
   "author": "Gospodin Dimitrov <gospodindimitroff@gmail.com>",
   "license": "MIT",
